--- a/build.yaml
+++ b/build.yaml
@@ -74,7 +74,7 @@ include:
     shield: corne_dongle_pro_micro dongle_display
     # cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Dongle_O\"
     artifact-name: nice_corne_dongle_oled
-    # snippet: studio-rpc-usb-uart
+    snippet: studio-rpc-usb-uart
     # snippet: zmk-usb-logging
     # snippet: zmk-usb-logging
     # snippet: zmk-usb-logging
@@ -83,15 +83,12 @@ include:
     ### ProMicro_Dongle START ###
     # NICE x PUCHI and nice_oled + rgb
   - board: nice_nano_v2
-    shield: corne_left nice_oled
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Corne_Oled_RGB\"
-    artifact-name: nice_corne_left_oled_rgb
-    snippet: rgb-config studio-rpc-usb-uart
+    shield: corne_left_peripheral
+    artifact-name: nice_corne_left_peripheral
   - board: nice_nano_v2
-    shield: corne_right nice_oled
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Corne_Oled_RGB\"
-    artifact-name: nice_corne_right_oled_rgb
-    snippet: rgb-config studio-rpc-usb-uart
+    shield: corne_right
+    artifact-name: nice_corne_right
+
     
     
     ### Pro Micro END ###
